--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,9 +3,12 @@ site_url: https://pranaykotas.github.io/aiforindia/
 theme:
   name: material
   features:
-    - navigation.tabs
+    # - navigation.tabs
     - navigation.sections
-    - toc.integrate
+    - navigation.footer
+    - navigation.expand
+    - navigation.indexes
+    - toc.follow
     - navigation.top
     - search.suggest
     - search.highlight
@@ -26,6 +29,11 @@ theme:
         name: Switch to light mode    
       primary: teal
       accent: lime
+  font:
+   text: Alegreya Sans
+   code: Roboto Mono
+
+# Plugins
 
 plugins:
   - social
@@ -57,5 +65,12 @@ markdown_extensions:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
 
-copyright: |
-  &copy; 2023 <a href="https://github.com/pranaykotas"  target="_blank" rel="noopener">Pranay Kotasthane</a>
+# Page Tree
+nav:
+  - Home: index.md
+  - AI Geopolitics: geopolitics.md
+  - AI in Education: education.md
+  - AI for Industry: industry.md
+  - AI Fundamentals: fundamentals.md
+
+
