--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,7 @@ theme:
 plugins:
   - social
   - search
+  - mkdocs-pdf
 
 extra:
   social:
@@ -47,6 +48,7 @@ extra:
       link: https://twitter.com/pranaykotas
     - icon: fontawesome/brands/linkedin
       link: https://www.linkedin.com/in/pranaykotas/
+
 
 markdown_extensions:
   - pymdownx.highlight:
